Update plot_training docstring for accuracy metric

--- a/speaker-identification.ipynb
+++ b/speaker-identification.ipynb
@@ -160,10 +160,10 @@
     "\n",
     "def plot_training(history, figsize=(26, 10)):\n",
     "    \"\"\"\n",
-    "    Plots training curves on a 2 by 1 subplot: epochs v. loss and epochs v. metric for the training set and validation set (if validation=True).\n",
+    "    Plots training curves on a 2 by 1 subplot: epochs v. loss and epochs v. accuracy for the training set and validation set.\n",
     "    Args:\n",
-    "        history: (history training object). if validation=True, history.history must contain val_loss and val_'metric' as dictionary keys.\n",
-    "        figsize (tuple): tuple of (width, height). each axes containing (loss and metric) will be half these lengths.\n",
+    "        history: (history training object). history.history must contain val_loss and val_accuracy as dictionary keys.\n",
+    "        figsize (tuple): tuple of (width, height). each axes containing (loss and accuracy) will be half these lengths.\n",
     "    \"\"\"\n",
     "    width, height = figsize[0], figsize[1]\n",
     "    plt.figure(figsize=(width, height))\n",
