Update docstring for make_ds function
Removed mention of memory usage from docstring.

--- a/speaker-identification.ipynb
+++ b/speaker-identification.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "def make_ds(X, y, batch_size, training=False, shuffle_buf=5000, random_seed=20):\n",
     "    \"\"\"\n",
-    "    Builds and returns a tf.data.Dataset from a generator function. This keeps memory usage low when working with large datasets.\n",
+    "    Builds and returns a tf.data.Dataset from a generator function.\n",
     "    Args:\n",
     "        X: (np.ndarray) model inputs.\n",
     "        y: (np.ndarray) targets.\n",
