Fix formatting and clarify normalization note in notebook

--- a/speaker-identification.ipynb
+++ b/speaker-identification.ipynb
@@ -260,7 +260,7 @@
     "        label_idx = labels[i]\n",
     "        # Iterate over columns where each column contains predicted probabilities of classes for some example.\n",
     "        for j in range(predicted_probs.shape[1]):\n",
-    "            # The (1-p)**2 if the probability is for the true class label, else (0-p)**2.\n",
+    "            # (1-p)**2 if the probability is for the true class label, else (0-p)**2.\n",
     "            brier_matrix[i, j] = (1-predicted_probs[i, j])**2 if label_idx==j else (0-predicted_probs[i, j])**2\n",
     "    # Sum over rows and columns, dividing by the number of examples for the average. \n",
     "    return np.sum(brier_matrix) / brier_matrix.shape[0]\n",
@@ -434,11 +434,11 @@
     "\n",
     "Below are the steps for normalization, padding, and feature extraction. We first define a few constants to fix the shapes of the zero-filled arrays used to store the MFCCs and their delta features. To do this, we need to account for two details.\n",
     "\n",
-    "First, we enforce a uniform signal length MAX_LEN = 160,000 samples (10 seconds at 16 kHz) by applying either truncation or right-side zero padding (mutually exclusive) before computing features.\n",
+    "First, we enforce a uniform signal length of 160,000 samples (10 seconds at 16 kHz) by applying either truncation or right-side zero padding before computing features.\n",
     "\n",
     "Second, Librosa implicitly pads the signal by n_fft // 2 zeros on both the left and right when computing the STFT. This affects the resulting number of time frames (N_FRAMES), which becomes the final dimension of the MFCC and delta arrays.\n",
     "\n",
-    "**Note**: Note: For signals longer than MAX_LEN, we normalize after truncation so the amplitude statistics are computed only from the retained portion of the samples. For signals shorter than MAX_LEN, we normalize before padding to avoid biasing the normalization statistics toward zero."
+    "**Note**: Note: For signals longer than MAX_LEN = 160_000, we normalize after truncation so the amplitude statistics are computed only from the retained portion of the samples. For signals shorter than MAX_LEN, we normalize before padding to avoid biasing the normalization statistics toward zero."
    ]
   },
   {
