--- a/speaker-identification.ipynb
+++ b/speaker-identification.ipynb
@@ -616,7 +616,7 @@
    "id": "2d4a4f6d",
    "metadata": {},
    "source": [
-    "We’ll create a list of unique speaker IDs called classes, where each ID’s index serves as its integer class label. To remove duplicates, we’ll use set(), but sets do not preserve a deterministic order—recreating classes could produce a different ordering (and therefore different label assignments). To keep the mapping fixed and reproducible, we’ll save classes to a .json file."
+    "We’ll create a list of unique speaker IDs called classes, where each ID’s index serves as its integer class label. To remove duplicates, we’ll use set(), but sets do not preserve a deterministic order; recreating classes could produce a different ordering (and therefore different label assignments). To keep the mapping fixed and reproducible, we’ll save classes to a .json file."
    ]
   },
   {
